added forms and input

--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
     <head>
         <meta charset="UTF-8">
         <meta name="description" content="This is am awesom website">
+        <meta name="author" content="Huzaifa">
+        <meta name="keywords" content="HTML, Tutorial">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Huzaifa's Website</title>
     </head>
-    <body style="background-color: lightblue;">
+    <body>
         <!-- <h2>Huzaifa's Website</h2>
         <hr>
         <p><big>This is</big> <small>my</small> <b><i>paragraph</i></b></p>
@@ -75,7 +78,7 @@
             <dd>- They are oranges</dd>
         </dl> -->
 
-        <table>
+        <!-- <table>
             <thead>
                 <caption><h2>List of Numbers</h2></caption>
                 <tr>
@@ -97,6 +100,36 @@
                     <td>Six</td>
                 </tr>
             </tbody>
-        </table>
+        </table> -->
+
+        <!-- <a href="#">Link1</a>
+        <a href="#">Link2</a>
+
+        <p>Paragraph1</p>
+        <p>Paragraph2</p> -->
+
+        <!-- <span>span1</span>
+        <span>span2</span>
+        <hr>
+        <div>div1</div>
+        <div>div2</div> -->
+
+        <!-- <input type="text" value="Enter your Username"/>
+        <input type="password" />
+
+        <textarea rows="10" cols="30">
+            Enter a paragraph
+        </textarea> -->
+        <!-- <input type="date"> -->
+        <!-- <input type="range"> -->
+        <!-- <input type="file"> -->
+        <!-- <input type="checkbox">
+        <input type="checkbox"> -->
+        <!-- <input type="radio" name="btn">
+        <input type="radio" name="btn"> -->
+        <!-- <form>
+            <input type="submit">
+        </form> -->
+        <iframe src="https://amazon.com/" width="1000" height="800" frameborder="0">Sorry</iframe>
     </body>
 </html>
